# custom-game-engine-demo01

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/sp_engine/: engine.h  service_locator.h
engine/include/sp_engine/platform/: entry_point.h  game.h  windows.h
engine/include/sp_engine/rendering/: renderer.h
engine/shaders/: triangle.frag  triangle.vert
engine/src/: engine.cpp
engine/src/platform/: game.cpp  multiplatform_window.cpp  multiplatform_window.h
engine/src/rendering/vulkan/: vulkan_initializers.cpp  vulkan_initializers.h  vulkan_pipeline_builder.cpp  vulkan_pipeline_builder.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_types.h  vulkan_utilities.cpp  vulkan_utilities.h
src/: main.cpp
